# envdiff

./: .gitignore  README.md  setup.cfg
envdiff/: auditor.py  caster.py  classifier.py  cli.py  cli_audit.py  cli_differ.py  cli_duplicator.py  cli_encryptor.py  cli_frequency.py  cli_normalizer.py  cli_pinner.py  cli_profile.py  cli_renamer.py  cli_score.py  cli_sorter.py  cli_stripper.py  cli_summarizer.py  cli_tagger.py  cli_trimmer.py  cli_watcher.py  comparator.py  core.py  differ.py  differ_baseline.py  differ_multi.py  duplicator.py  encryptor.py  exporter.py  flattener.py  formatter.py  frequency_schema.json  grouper.py  interpolator.py  linter.py  masker.py  merger.py  normalizer.py  parser.py  pinner.py  profile_schema.json  (+20 more)
tests/: test_auditor.py  test_caster.py  test_classifier.py  test_cli.py  test_cli_differ.py  test_cli_duplicator.py  test_cli_frequency.py  test_cli_pinner.py  test_cli_profile.py  test_cli_renamer.py  test_cli_score.py  test_cli_sorter.py  test_cli_tagger.py  test_cli_watcher.py  test_comparator.py  test_differ.py  test_differ_baseline.py  test_differ_multi.py  test_duplicator.py  test_encryptor.py  test_exporter.py  test_flattener.py  test_formatter.py  test_grouper.py  test_interpolator.py  test_linter.py  test_masker.py  test_merger.py  test_normalizer.py  test_parser.py  test_pinner.py  test_profiler.py  test_redactor.py  test_renamer.py  test_resolver.py  test_scorer.py  test_snapshotter.py  test_sorter.py  test_stripper.py  test_summarizer.py  (+6 more)
