[metadata]
name = envdiff
version = 0.1.0
description = Tool to diff and sync .env files across environments safely
author = envdiff contributors
license = MIT
python_requires = >=3.8

[options]
packages = find:
include_package_data = True

[options.entry_points]
console_scripts =
    envdiff = envdiff.cli:main

[options.extras_require]
dev =
    pytest>=7.0
    pytest-cov

[tool:pytest]
testpaths = tests
addopts = --tb=short

[flake8]
max-line-length = 100
exclude = .git,__pycache__,*.egg-info
